Added an index route

--- a/Symfony/app/config/routing.yml
+++ b/Symfony/app/config/routing.yml
@@ -6,3 +6,7 @@
 #_internal:
 #    resource: "@FrameworkBundle/Resources/config/routing/internal.xml"
 #    prefix:   /_internal
+
+index:
+    pattern:   /
+    defaults:  { _controller: Welcome }
