--- a/Symfony/app/config/routing.yml
+++ b/Symfony/app/config/routing.yml
@@ -9,8 +9,4 @@
 
 _welcome:
     pattern:   /
-    defaults:  { _controller: AcmeDemoBundle:Main:homepage }
-
-_welcome2:
-    pattern:   /jsmulan-sandbox/
-    defaults:  { _controller: AcmeDemoBundle:Main:homepage }
+    defaults:  { _controller: AcmeDemoBundle:Welcome:homepage }
